@@ -47,3 +47,4 @@ m4_include([cliques.at])
 m4_include([eigen.at])
 m4_include([attributes.at])
 m4_include([arpack.at])
+m4_include([bipartite.at])
